--- a/index.html
+++ b/index.html
@@ -54,6 +54,61 @@
             <img src="./images/img__categorias/categoria-oculos.png" alt="categoria óculos">
         </section>
 
+        <section class="container__produtos">
+            <h2 class="titulo__produtos">Produtos que estão bombando!</h2>
+
+            <div class="produtos__itens">
+                <img src="./images/img__produtos/Card camiseta.png" alt="">
+                <h3 class="card__titulo">camiseta Conforto</h3>
+                <h4 class="card__texto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. 
+                    Modelagem unissex.</h4>
+                <p  class="preco">R$ 70,00</p>
+                <button class="ver__mais">Ver mais</button>
+            </div>
+
+            <div class="produtos__itens">
+                <img src="./images/img__produtos/Card calça.png" alt="">
+                <h3 class="card__titulo">Calça Alfaiataria</h3>
+                <h4 class="card__texto">Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!</h4>
+                <p  class="preco">R$ 180,00</p>
+                <button class="ver__mais">Ver mais</button>
+            </div>
+
+            <div class="produtos__itens">
+                <img src="./images/img__produtos/Card tenis.png" alt="">
+                <h3 class="card__titulo">Tênis Chunky</h3>
+                <h4 class="card__texto">Snicker casual com solado mais alto e modelagem robusta. 
+                    Modelo unissex.</h4>
+                <p  class="preco">R$ 250,00</p>
+                <button class="ver__mais">Ver mais</button>
+            </div>
+
+            <div class="produtos__itens">
+                <img src="./images/img__produtos/Card jaqueta jeans.png" alt="">
+                <h3 class="card__titulo">Jaqueta Jeans</h3>
+                <h4 class="card__texto">Modelo unissex oversized com gola de camurça. Atemporal e autêntica!</h4>
+                <p  class="preco">R$ 150,00</p>
+                <button class="ver__mais">Ver mais</button>
+            </div>
+
+            <div class="produtos__itens">
+                <img src="./images/img__produtos/Cards óculos.png" alt="">
+                <h3 class="card__titulo">Óculos Redondo</h3>
+                <h4 class="card__texto">Armação metálica em grafite com lentes arredondadas. Sem erro!</h4>
+                <p  class="preco">R$ 120,00</p>
+                <button class="ver__mais">Ver mais</button>
+            </div>
+
+            <div class="produtos__itens">
+                <img src="./images/img__produtos/Card bolsa.png" alt="">
+                <h3 class="card__titulo">Bolsa coringa</h3>
+                <h4 class="card__texto">Bolsa camel em couro sintético de alta duração. 
+                    Ideal para acompanhar você por uma vida!</h4>
+                <p  class="preco">R$ 120,00</p>
+                <button class="ver__mais">Ver mais</button>
+            </div>
+        </section>
+
         <section class="container__facilidades">
             <h2>Conheça todas as nossas facilidades</h2>
             <div class="facilidades__itens">
@@ -72,7 +127,18 @@
                 <p>Moda responsável, que respeita </br>o meio ambiente.</p>
             </div>
         </section>
+
+        <section class="container__newletter">
+            <h2 class="texto__newletter">Quer receber nossas novidades, 
+                promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h2>
+            <input type="email" name="" id="" class="campo__email">
+            <button class="botao__enviar">Enviar</button>
+        </section>
     </main>
+
+    <footer class="rodape">
+        <p class="rodape__texto">2023 &copy; Desenvolvido por Alura | </br>Projeto fictício sem fins comerciais.</p>
+    </footer>
 </body>
 
 </html>
