--- a/index.html
+++ b/index.html
@@ -18,13 +18,20 @@
             <img src="./images/Logo mobile.svg" alt="logo">
 
             <div class="menu__hanburguer">
-                <div id="barra-1"></div>
-                <div id="barra-2"></div>
-                <div id="barra-3"></div>
+                <div class="barraMenu"></div>
+                <div class="barraMenu"></div>
+                <div class="barraMenu"></div>
             </div>
 
             <div class="container__navBar">
                 <ul class="navBar">
+                    <li>
+                        <button class="fecharMenu" id="fecharMenu">
+                            <div class="barraMenuFechar" id="barra-1"></div>
+                            <div class="barraMenuFechar" id="barra-2"></div>
+                            <div class="barraMenuFechar" id="barra-3"></div>
+                        </button>
+                    </li>
                     <li>Home</li>
                     <li>Nossas lojas</li>
                     <li>Novidades</li>
@@ -60,9 +67,9 @@
             <div class="produtos__itens">
                 <img src="./images/img__produtos/Card camiseta.png" alt="">
                 <h3 class="card__titulo">camiseta Conforto</h3>
-                <h4 class="card__texto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão. 
+                <h4 class="card__texto">Multicores e tamanhos. Tecido de algodão 100%, fresquinho para o verão.
                     Modelagem unissex.</h4>
-                <p  class="preco">R$ 70,00</p>
+                <p class="preco">R$ 70,00</p>
                 <button class="ver__mais">Ver mais</button>
             </div>
 
@@ -70,16 +77,16 @@
                 <img src="./images/img__produtos/Card calça.png" alt="">
                 <h3 class="card__titulo">Calça Alfaiataria</h3>
                 <h4 class="card__texto">Modelo Wide Leg alfaiataria em linho. Uma peça pra vida toda!</h4>
-                <p  class="preco">R$ 180,00</p>
+                <p class="preco">R$ 180,00</p>
                 <button class="ver__mais">Ver mais</button>
             </div>
 
             <div class="produtos__itens">
                 <img src="./images/img__produtos/Card tenis.png" alt="">
                 <h3 class="card__titulo">Tênis Chunky</h3>
-                <h4 class="card__texto">Snicker casual com solado mais alto e modelagem robusta. 
+                <h4 class="card__texto">Snicker casual com solado mais alto e modelagem robusta.
                     Modelo unissex.</h4>
-                <p  class="preco">R$ 250,00</p>
+                <p class="preco">R$ 250,00</p>
                 <button class="ver__mais">Ver mais</button>
             </div>
 
@@ -87,7 +94,7 @@
                 <img src="./images/img__produtos/Card jaqueta jeans.png" alt="">
                 <h3 class="card__titulo">Jaqueta Jeans</h3>
                 <h4 class="card__texto">Modelo unissex oversized com gola de camurça. Atemporal e autêntica!</h4>
-                <p  class="preco">R$ 150,00</p>
+                <p class="preco">R$ 150,00</p>
                 <button class="ver__mais">Ver mais</button>
             </div>
 
@@ -95,16 +102,16 @@
                 <img src="./images/img__produtos/Cards óculos.png" alt="">
                 <h3 class="card__titulo">Óculos Redondo</h3>
                 <h4 class="card__texto">Armação metálica em grafite com lentes arredondadas. Sem erro!</h4>
-                <p  class="preco">R$ 120,00</p>
+                <p class="preco">R$ 120,00</p>
                 <button class="ver__mais">Ver mais</button>
             </div>
 
             <div class="produtos__itens">
                 <img src="./images/img__produtos/Card bolsa.png" alt="">
                 <h3 class="card__titulo">Bolsa coringa</h3>
-                <h4 class="card__texto">Bolsa camel em couro sintético de alta duração. 
+                <h4 class="card__texto">Bolsa camel em couro sintético de alta duração.
                     Ideal para acompanhar você por uma vida!</h4>
-                <p  class="preco">R$ 120,00</p>
+                <p class="preco">R$ 120,00</p>
                 <button class="ver__mais">Ver mais</button>
             </div>
         </section>
@@ -129,16 +136,21 @@
         </section>
 
         <section class="container__newletter">
-            <h2 class="texto__newletter">Quer receber nossas novidades, 
+            <h2 class="texto__newletter">Quer receber nossas novidades,
                 promoções exclusivas e 10% OFF na primeira compra? Cadastre-se!</h2>
-            <input type="email" name="" id="" class="campo__email">
-            <button class="botao__enviar">Enviar</button>
+            <div class="container__enviarEmail">
+                <input type="email" name="" id="" class="campo__email" placeholder="Digite seu email">
+                <button class="botao__enviar">Enviar</button>
+            </div>
+
         </section>
     </main>
 
     <footer class="rodape">
         <p class="rodape__texto">2023 &copy; Desenvolvido por Alura | </br>Projeto fictício sem fins comerciais.</p>
     </footer>
+
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
