--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
 
         <div class="container__banner">
-            <img src="./images/img__carrossel/banner_carrossel_1--mobile.png" alt="banner do carrosel">
+            <img src="./images/img__carrossel/banner_carrosel--mobile.png" alt="banner do carrosel">
         </div>
     </header>
 
@@ -147,7 +147,7 @@
     </main>
 
     <footer class="rodape">
-        <p class="rodape__texto">2023 &copy; Desenvolvido por Alura | </br>Projeto fictício sem fins comerciais.</p>
+        <p class="rodape__texto">2023 &copy; Desenvolvido por Alura | Projeto fictício sem fins comerciais.</p>
     </footer>
 
     <script src="./js/main.js"></script>
