update na resposividade

--- a/index.html
+++ b/index.html
@@ -51,14 +51,21 @@
     </header>
 
     <main class="container__main">
-        <section class="container__categoria">
+        <section class="container__categoria categoria__tablet">
             <h2>Busque por categoria:</h2>
-            <img src="./images/img__categorias/categoria-camisa.png" alt="categoria camisas">
-            <img src="./images/img__categorias/categoria-bolsas.png" alt="categoria bolsas">
-            <img src="./images/img__categorias/categoria-calcados.png" alt="categoria calçados">
-            <img src="./images/img__categorias/categoria-calcas.png" alt="categoria calças">
-            <img src="./images/img__categorias/categoria-casacos.png" alt="categoria casacos">
-            <img src="./images/img__categorias/categoria-oculos.png" alt="categoria óculos">
+            <img class="img__mobile" src="./images/img__categorias/categoria-camisa.png" alt="categoria camisas">
+            <img class="img__mobile" src="./images/img__categorias/categoria-bolsas.png" alt="categoria bolsas">
+            <img class="img__mobile" src="./images/img__categorias/categoria-calcados.png" alt="categoria calçados">
+            <img class="img__mobile" src="./images/img__categorias/categoria-calcas.png" alt="categoria calças">
+            <img class="img__mobile" src="./images/img__categorias/categoria-casacos.png" alt="categoria casacos">
+            <img class="img__mobile" src="./images/img__categorias/categoria-oculos.png" alt="categoria óculos">
+            <!--imagens tablet-->
+            <img class="img__tablet" src="./images/img__categorias/categoria-camisa-tablet.png" alt="categoria camisas">
+            <img class="img__tablet" src="./images/img__categorias/categoria-bolsas-tablet.png" alt="categoria bolsas">
+            <img class="img__tablet" src="./images/img__categorias/categoria-calcados-tablet.png" alt="categoria calçados">
+            <img class="img__tablet" src="./images/img__categorias/categoria-calcas-tablet.png" alt="categoria calças">
+            <img class="img__tablet" src="./images/img__categorias/categoria-casacos-tablet.png" alt="categoria casacos">
+            <img class="img__tablet" src="./images/img__categorias/categoria-oculos-tablet.png" alt="categoria óculos">
         </section>
 
         <section class="container__produtos">
