--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         </button>
                     </li>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Nossas lojas</a></li>
-                    <li><a href="#">Novidade</a>s</li>
-                    <li><a href="#">Promoções</a></li>
+                    <li><a href="./pages/emBreve.html">Nossas lojas</a></li>
+                    <li><a href="./pages/emBreve.html">Novidade</a>s</li>
+                    <li><a href="./pages/emBreve.html">Promoções</a></li>
                 </ul>
             </div>
         </section>
